--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   mariadb:
     image: mariadb:latest
-    # container_name: mariadb-container
+    container_name: mariadb-container
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=practicaud3
